fixed cta alignment

--- a/style.css
+++ b/style.css
@@ -146,7 +146,13 @@ a {
     font-size: 20px;
 }
 
-.call-to-action-container {
+.cta-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.call-to-action-element {
     font-family: Roboto, sans-serif;
     display: flex;
     flex-direction: row;
@@ -160,11 +166,8 @@ a {
     justify-content: space-between;
     padding-left: 100px;
     padding-right: 100px;
-}
-
-
-.call-to-action-element {
-
+    min-width: 1000px;
+    
 }
     
 
